@@ -8,22 +8,21 @@ static char *music_site_list[] =
 	"BestRadio 台北好事989", "212",
 	"BestRadio 花蓮好事935", "303",
 	"BestRadio 高雄港都983", "213",
-	"FM S.H.E 我的電台", "369",
 	"Flyradio 飛揚調頻895", "357",
-	"HitFm 聯播網 台中91.5", "88",
-	"HitFm 聯播網 高雄90.1", "90",
-	"HitFm 聯播網 台北91.7", "87",
 	"KISS RADIO 南投廣播", "258",
 	"KISS RADIO 台南知音廣播", "255",
 	"KISS RADIO 大苗栗廣播", "256",
 	"KISS RADIO 大眾廣播電台", "156",
 	"KISS RADIO 網路音樂台", "308",
+	"POP Radio", "370",
 	"中廣古典網", "162",
 	"中廣流行網", "205",
 	"中廣音樂網 i radio", "206",
 	"佳音CCM", "304",
 	"全國廣播音樂網", "338",
-	"台北之音經典音樂台", "222",
+	"台北之音HitFM聯播網 台中", "88",
+	"台北之音HitFM聯播網 台北", "222",
+	"台北之音HitFM聯播網 高雄", "90",
 	"台北愛樂", "228",
 	"台灣之音-音樂", "313",
 	"太陽電台", "289",
@@ -50,7 +49,6 @@ static char *life_site_list[] =
 	"宜蘭中山電台", "301",
 	"環宇廣播", "282",
 	"真心之音廣播電台", "217",
-	"警廣長青網", "271",
 	"青春線上", "356",
 	"飛碟電台", "232",
 	NULL
@@ -66,7 +64,6 @@ static char *news_site_list[] =
 static char *others_site_list[] =
 {
 	"台灣之音-華語", "315",
-	"嘉義之音", "368",
 	"復興廣播電台 短波網", "288",
 	"復興廣播電台 第一網", "286",
 	"復興廣播電台 第二網", "287",
@@ -96,41 +93,6 @@ static char *culture_site_list[] =
 	"寶島客家", "241",
 	"新客家廣播電台", "254",
 	"高屏溪客家電台", "298",
-	NULL
-};
-
-static char *traffic_site_list[] =
-{
-	"警廣—交通網台東台", "358",
-	"警廣全國交通網", "269",
-	"警廣台中台", "260",
-	"警廣台北台", "261",
-	"警廣台南台", "263",
-	"警廣宜蘭台", "265",
-	"警廣新竹台", "268",
-	"警廣花蓮台", "266",
-	"警廣高雄台", "267",
-	NULL
-};
-
-static char *live_site_list[] =
-{
-	"民視直播新聞", "600",
-	"中視整點新聞", "36",
-	"KuSport", "996",
-	"KuMovie", "998",
-	"KuDrama", "999",
-	"KuLife", "997",
-	"大愛電視台", "38",
-	"大愛電視二台", "57",
-	"LPGA高爾夫直播", "602",
-	"華視IQ教育文化頻道", "16",
-	"華視影音頻道", "50",
-	"華視EQ休閒頻道", "18",
-	"Bloomberg Television", "1001",
-	"流行追蹤", "21",
-	"台灣樂起來(樂透開獎)", "58",
-	"生命電視台", "54",
 	NULL
 };
 #endif /* __SITE_LIST_H__ */
